# lazy-app-fin-cli

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: manual.html
finlens/: cli.py  config.py
finlens/analytics/: capm.py  garch.py  indicators.py  risk.py
finlens/data/: fetcher.py
finlens/llm/: analyst.py
finlens/output/: terminal.py
finlens/signals/: engine.py
tests/: test_functional.py  test_llm_e2e.py
