[project]
name = "finlens"
version = "0.1.0"
description = "Terminal stock signal scanner with lazy daily analysis"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "arch>=7.0.0",
    "textual>=0.80.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "rich>=13.8.0",
    "typer>=0.12.0",
    "pyarrow>=18.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
finlens = "finlens.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.textual]
theme = "nord"

[tool.textual.testing]
timeout_seconds = 30
